# novel-translation-wasm

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.html  package.json  quasar.config.js
dicts/: vietphrase-test.txt
public/dicts/: hanviet.txt  luatnhan.txt  names.txt
src/: converter.rs  lib.rs
src-rust/: converter.rs  dictionary.rs  lib.rs
src/layouts/: MainLayout.vue
src/pages/: IndexPage.vue
